# Mandelbrot

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MandelbrotWidget.cpp  MandelbrotWidget.h  MandelbrotWorker.cpp  MandelbrotWorker.h  RenderThread.cpp  RenderThread.h  SettingsWidget.cpp  SettingsWidget.h  UltraMath.cpp  UltraMath.h  main.cpp
locale/: mandelbrot_sk_SK.ts
